--- a/src/client/clone/styles.css
+++ b/src/client/clone/styles.css
@@ -10,6 +10,12 @@
 body{
     width: 100%;
 }
+.calc-title{
+    font-size:24px;
+    color:#fff;
+    letter-spacing: .25px;
+    
+}
 #wrapper{
     width: 100%;
     display: flex;
@@ -63,9 +69,9 @@ body{
     display:flex;
     background:#f00;
     display:flex;
-    flex-direction:column;
-    align-items: end;
-    justify-content: center;
+    flex-direction:row;
+    align-items: center;
+    justify-content: space-between;
     transition:.5s;
 }
 #exit-container:hover{
